[gd_scene load_steps=49 format=3 uid="uid://c4eq6ck01x7ao"]

[ext_resource type="Script" uid="uid://csrtiit658one" path="res://engine/game/input_manager.gd" id="1_4aqfu"]
[ext_resource type="Script" uid="uid://b7nriuublxfpo" path="res://engine/game/balancer.gd" id="1_xapae"]
[ext_resource type="CompressedTexture3D" uid="uid://cw7h14f61vo0x" path="res://LUT2.webp" id="2_tb6ku"]
[ext_resource type="Script" uid="uid://bbmqg3c1pc7h3" path="res://engine/game/ui/minimap/subviewport.gd" id="3_06ecp"]
[ext_resource type="Shader" uid="uid://tq1sju8pdr36" path="res://engine/game/lights/new_shader.gdshader" id="3_h7a1n"]
[ext_resource type="Texture2D" uid="uid://dfu0y308f33rp" path="res://data/ui/cursor/Hand1.webp" id="3_rf48r"]
[ext_resource type="PackedScene" uid="uid://0spn4csgi7k1" path="res://engine/game/ui/minimap/map.tscn" id="3_ybns6"]
[ext_resource type="Script" uid="uid://5ff2rickeuql" path="res://engine/game/lights/color_rect.gd" id="4_s88ld"]
[ext_resource type="Texture2D" uid="uid://ba87fcmqppv5j" path="res://data/ui/cursor/Hover_Enemy.webp" id="4_toluw"]
[ext_resource type="Texture2D" uid="uid://bcixyv7kvrtxn" path="res://data/ui/cursor/Hover_Enemy_Disabled.webp" id="5_dp1ib"]
[ext_resource type="Texture2D" uid="uid://cn46pgxvwo13r" path="res://data/ui/cursor/Hand2.webp" id="6_5t0se"]
[ext_resource type="PackedScene" uid="uid://diknhd1061r8r" path="res://engine/game/ui/ui.tscn" id="6_pnpm1"]
[ext_resource type="Texture2D" uid="uid://bnu40pa7h3jgo" path="res://data/ui/cursor/Hover_Shop.webp" id="7_tqj1w"]
[ext_resource type="PackedScene" uid="uid://cmuj1g4sexvke" path="res://data/particles/cursor_moveto/Cursor_Moveto.tscn" id="8_toluw"]
[ext_resource type="Script" uid="uid://bk2me5aywj65r" path="res://engine/game/camera.gd" id="25_obkvb"]
[ext_resource type="PackedScene" uid="uid://dgxp55bfpc742" path="res://data/characters/Ahri/unit.tscn" id="27_0mdok"]
[ext_resource type="Script" uid="uid://k4gr60bhcuy" path="res://data/levels/1/scripts/LevelScript.gd" id="35_3l20p"]
[ext_resource type="Script" uid="uid://dso6iekfjnir4" path="res://data/levels/1/scripts/CreateLevelProps.gd" id="35_x1iow"]
[ext_resource type="Script" uid="uid://bfbsma0i41itq" path="res://engine/level/constants.gd" id="36_dp1ib"]
[ext_resource type="PackedScene" uid="uid://brmob4058kgjb" path="res://data/characters/Turrets/Front/Order/unit.tscn" id="36_dp7n3"]
[ext_resource type="PackedScene" uid="uid://n1ycncd12rnq" path="res://data/characters/Turrets/Back/Order/unit.tscn" id="36_oe0ed"]
[ext_resource type="PackedScene" uid="uid://c03dkhsata3gj" path="res://data/characters/Nexus/Order/unit.tscn" id="36_yik85"]
[ext_resource type="PackedScene" uid="uid://cbfh3ax275136" path="res://data/characters/Dummy/unit.tscn" id="37_5t0se"]
[ext_resource type="PackedScene" uid="uid://dwtgxxdqtsfyo" path="res://data/characters/Nexus/Chaos/unit.tscn" id="37_5vbbt"]
[ext_resource type="PackedScene" uid="uid://btacpjtg4pcad" path="res://data/characters/Turrets/Back/Chaos/unit.tscn" id="38_bto7k"]
[ext_resource type="PackedScene" uid="uid://biov8lq32ueqn" path="res://data/characters/Turrets/Middle/Order/unit.tscn" id="38_mmvut"]
[ext_resource type="Script" uid="uid://idwdrm8s2y1f" path="res://engine/game/ground.gd" id="38_tqj1w"]
[ext_resource type="PackedScene" uid="uid://k3wk84ssvmbv" path="res://data/characters/Inhibitor/Chaos/unit.tscn" id="38_vsljp"]
[ext_resource type="Script" uid="uid://fe57ycv6a1gi" path="res://engine/effects/particle.gd" id="39_gtrna"]
[ext_resource type="PackedScene" uid="uid://b1rfde0af8ixp" path="res://data/characters/Turrets/Front/Chaos/unit.tscn" id="39_qsin3"]
[ext_resource type="PackedScene" uid="uid://t0fwl3cknumm" path="res://data/characters/Inhibitor/Order/unit.tscn" id="39_rx1pf"]
[ext_resource type="PackedScene" uid="uid://w234i42o5d2y" path="res://data/characters/Turrets/Middle/Chaos/unit.tscn" id="41_igafg"]
[ext_resource type="PackedScene" uid="uid://dfqmiqpdxf0mi" path="res://data/characters/Turrets/HQ/Order/unit.tscn" id="43_vg3su"]
[ext_resource type="PackedScene" uid="uid://dos4v7ypu3iol" path="res://data/characters/Turrets/HQ/Chaos/unit.tscn" id="44_yyq8c"]
[ext_resource type="PackedScene" uid="uid://buonvrdcurdhv" path="res://data/characters/Turrets/Fountan/Order/unit.tscn" id="45_yik85"]
[ext_resource type="PackedScene" uid="uid://b0j57eqkg1gad" path="res://data/characters/Turrets/Fountan/Chaos/unit.tscn" id="46_5vbbt"]
[ext_resource type="PackedScene" uid="uid://7q5sw0yww3oo" path="res://data/levels/1/map_inherited.tscn" id="71_7skrr"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_8hxwk"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_8uyej"]
sky_material = SubResource("ProceduralSkyMaterial_8hxwk")

[sub_resource type="Environment" id="Environment_xvl36"]
background_mode = 2
sky = SubResource("Sky_8uyej")
tonemap_mode = 2
glow_enabled = true
adjustment_enabled = true
adjustment_color_correction = ExtResource("2_tb6ku")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_om28v"]
shader = ExtResource("3_h7a1n")
shader_parameter/light_n = 0
shader_parameter/light_pos = null
shader_parameter/light_rng = null

[sub_resource type="QuadMesh" id="QuadMesh_608jq"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a806a"]
resource_local_to_scene = true

[sub_resource type="QuadMesh" id="QuadMesh_f4set"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="Environment" id="Environment_xapae"]
ambient_light_source = 1
reflected_light_source = 1
tonemap_mode = 2

[sub_resource type="ViewportTexture" id="ViewportTexture_vf0na"]
viewport_path = NodePath("SubViewport")

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_xapae"]

[sub_resource type="ViewportTexture" id="ViewportTexture_r0nt2"]
viewport_path = NodePath("Camera3/Camera/SubViewportContainer/SubViewport")

[node name="Node3D" type="Node3D"]

[node name="Balancer" type="Node" parent="."]
script = ExtResource("1_xapae")
metadata/_custom_type_script = ExtResource("1_xapae")

[node name="LightmapGI" type="LightmapGI" parent="."]
visible = false
quality = 0
directional = true
use_texture_for_bounces = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xvl36")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_angular_distance = 0.5
shadow_enabled = true

[node name="InputManager" type="Node3D" parent="." node_paths=PackedStringArray("main_hero")]
unique_name_in_owner = true
script = ExtResource("1_4aqfu")
main_hero = NodePath("../Ahri")
cursor_textures = Dictionary[int, Texture2D]({
0: ExtResource("3_rf48r"),
1: ExtResource("4_toluw"),
2: ExtResource("5_dp1ib"),
3: ExtResource("6_5t0se"),
4: ExtResource("7_tqj1w")
})
cursor_moveto_effect = ExtResource("8_toluw")

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
disable_3d = true
handle_input_locally = false
scaling_3d_mode = 0
sdf_oversize = 2
sdf_scale = 0
size = Vector2i(640, 640)
render_target_update_mode = 4
script = ExtResource("3_06ecp")

[node name="MeshInstance2D" type="MeshInstance2D" parent="SubViewport"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_om28v")
position = Vector2(256, -256)
mesh = SubResource("QuadMesh_608jq")
script = ExtResource("4_s88ld")

[node name="Camera2D" type="Camera2D" parent="SubViewport"]
unique_name_in_owner = true
position = Vector2(256, -256)

[node name="Node2D" parent="SubViewport" instance=ExtResource("3_ybns6")]

[node name="UI" parent="." instance=ExtResource("6_pnpm1")]
unique_name_in_owner = true
z_index = 2

[node name="Camera2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.746, 30, -3.787)

[node name="Camera3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.746, 22.485, 16.213)

[node name="Camera" type="Camera3D" parent="Camera3" node_paths=PackedStringArray("target")]
unique_name_in_owner = true
cull_mask = 524287
doppler_tracking = 2
current = true
fov = 32.0
script = ExtResource("25_obkvb")
target = NodePath("../../Ahri")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3/Camera"]
visible = false
material_override = SubResource("ShaderMaterial_a806a")
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_f4set")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Camera3/Camera"]
remote_path = NodePath("../SubViewportContainer/SubViewport/Camera3D")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Camera3/Camera"]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Camera3/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
scaling_3d_mode = 0
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Camera3/Camera/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0.746, 22.485, 16.213)
cull_mask = 524288
environment = SubResource("Environment_xapae")
fov = 32.0

[node name="Camera4" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 114.801, 22.17, -140.402)

[node name="Camera5" type="Node3D" parent="Camera4"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Map" parent="." instance=ExtResource("71_7skrr")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0)
viewport_texture = SubResource("ViewportTexture_vf0na")
object_cfg = "res://data/levels/1/ObjectCFG.cfg"
create_level_props_script = ExtResource("35_x1iow")

[node name="HQ_T1" parent="Map" instance=ExtResource("36_yik85")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.5361, 1.35, 20.494)
team = 1

[node name="HQ_T2" parent="Map" instance=ExtResource("37_5vbbt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 182.066, 1.35, 186.275)
team = 2

[node name="Barracks_T1_L1" parent="Map" instance=ExtResource("39_rx1pf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.7469, 1.35, 48.0652)
team = 1

[node name="Barracks_T1_C1" parent="Map" instance=ExtResource("39_rx1pf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.6091, 1.35, 42.6522)
team = 1

[node name="Barracks_T1_R1" parent="Map" instance=ExtResource("39_rx1pf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 43.1607, 1.35, 14.8302)
team = 1

[node name="Barracks_T2_L1" parent="Map" instance=ExtResource("38_vsljp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 156.772, 1.35, 191.76)
team = 2

[node name="Barracks_T2_C1" parent="Map" instance=ExtResource("38_vsljp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 160.773, 1.35, 163.67)
team = 2

[node name="Barracks_T2_R1" parent="Map" instance=ExtResource("38_vsljp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 188.945, 1.35, 159.438)
team = 2

[node name="Turret_T1_R_03" parent="Map" instance=ExtResource("36_dp7n3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 144.436, 0.591119, 11.6)
pos = 3
team = 1

[node name="Turret_T1_R_02" parent="Map" instance=ExtResource("38_mmvut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 93.172, 0.619441, 18.0901)
pos = 2
team = 1

[node name="Turret_T1_C_07" parent="Map" instance=ExtResource("36_oe0ed")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 53.6311, 1.3765, 14.922)
pos = 1
team = 1

[node name="Turret_T2_R_03" parent="Map" instance=ExtResource("39_qsin3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 192.51, 0.58589, 61.2968)
pos = 3
team = 2

[node name="Turret_T2_R_02" parent="Map" instance=ExtResource("41_igafg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 184.805, 0.540161, 114.505)
pos = 2
team = 2

[node name="Turret_T2_R_01" parent="Map" instance=ExtResource("38_bto7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 188.88, 1.36929, 149.814)
pos = 1
team = 2

[node name="Turret_T1_C_05" parent="Map" instance=ExtResource("36_dp7n3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 77.8282, 0.630579, 88.344)
lane = 1
pos = 3
team = 1

[node name="Turret_T1_C_04" parent="Map" instance=ExtResource("38_mmvut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 66.4172, 0.622275, 65.6962)
lane = 1
pos = 2
team = 1

[node name="Turret_T1_C_03" parent="Map" instance=ExtResource("36_oe0ed")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 46.2919, 1.37321, 49.3285)
lane = 1
pos = 1
team = 1

[node name="Turret_T2_C_05" parent="Map" instance=ExtResource("39_qsin3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 122.289, 0.633639, 118.569)
lane = 1
pos = 3
team = 2

[node name="Turret_T2_C_04" parent="Map" instance=ExtResource("41_igafg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 133.904, 0.589871, 141.491)
lane = 1
pos = 2
team = 2

[node name="Turret_T2_C_03" parent="Map" instance=ExtResource("38_bto7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 153.672, 1.38023, 157.47)
lane = 1
pos = 1
team = 2

[node name="Turret_T1_L_03" parent="Map" instance=ExtResource("36_dp7n3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.26559, 0.383416, 146.18)
lane = 2
pos = 3
team = 1

[node name="Turret_T1_L_02" parent="Map" instance=ExtResource("38_mmvut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.8671, 0.601478, 92.6741)
lane = 2
pos = 2
team = 1

[node name="Turret_T1_C_06" parent="Map" instance=ExtResource("36_oe0ed")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5233, 1.38329, 57.9765)
lane = 2
pos = 1
team = 1

[node name="Turret_T2_L_03" parent="Map" instance=ExtResource("39_qsin3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 55.9821, 0.187753, 195.288)
lane = 2
pos = 3
team = 2

[node name="Turret_T2_L_02" parent="Map" instance=ExtResource("41_igafg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 107.814, 0.560307, 188.654)
lane = 2
pos = 2
team = 2

[node name="Turret_T2_L_01" parent="Map" instance=ExtResource("38_bto7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 146.785, 1.3642, 192.586)
lane = 2
pos = 1
team = 2

[node name="Turret_T1_R_04" parent="Map" instance=ExtResource("36_dp7n3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 144.436, 0.591119, 11.6)
pos = 3
team = 1

[node name="Turret_T1_R_05" parent="Map" instance=ExtResource("38_mmvut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 93.172, 0.619441, 18.0901)
pos = 2
team = 1

[node name="Turret_T1_C_08" parent="Map" instance=ExtResource("36_oe0ed")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 53.6311, 1.3765, 14.922)
pos = 1
team = 1

[node name="Turret_T2_R_04" parent="Map" instance=ExtResource("39_qsin3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 192.51, 0.58589, 61.2968)
pos = 3
team = 2

[node name="Turret_T2_R_05" parent="Map" instance=ExtResource("41_igafg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 184.805, 0.540161, 114.505)
pos = 2
team = 2

[node name="Turret_T2_R_06" parent="Map" instance=ExtResource("38_bto7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 188.88, 1.36929, 149.814)
pos = 1
team = 2

[node name="Turret_T1_C_09" parent="Map" instance=ExtResource("36_dp7n3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 77.8282, 0.630579, 88.344)
lane = 1
pos = 3
team = 1

[node name="Turret_T1_C_10" parent="Map" instance=ExtResource("38_mmvut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 66.4172, 0.622275, 65.6962)
lane = 1
pos = 2
team = 1

[node name="Turret_T1_C_11" parent="Map" instance=ExtResource("36_oe0ed")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 46.2919, 1.37321, 49.3285)
lane = 1
pos = 1
team = 1

[node name="Turret_T1_C_01" parent="Map" instance=ExtResource("43_vg3su")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.2327, 1.40461, 29.0629)
lane = 1
pos = 5
team = 1

[node name="Turret_T1_C_02" parent="Map" instance=ExtResource("43_vg3su")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.1082, 1.37948, 22.5399)
lane = 1
pos = 4
team = 1

[node name="Turret_T2_C_06" parent="Map" instance=ExtResource("39_qsin3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 122.289, 0.633639, 118.569)
lane = 1
pos = 3
team = 2

[node name="Turret_T2_C_07" parent="Map" instance=ExtResource("41_igafg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 133.904, 0.589871, 141.491)
lane = 1
pos = 2
team = 2

[node name="Turret_T2_C_08" parent="Map" instance=ExtResource("38_bto7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 153.672, 1.38023, 157.47)
lane = 1
pos = 1
team = 2

[node name="Turret_T2_C_01" parent="Map" instance=ExtResource("44_yyq8c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 181.111, 1.34368, 177.956)
lane = 1
pos = 5
team = 2

[node name="Turret_T2_C_02" parent="Map" instance=ExtResource("44_yyq8c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 173.328, 1.34268, 184.16)
lane = 1
pos = 4
team = 2

[node name="Turret_OrderTurretShrine" parent="Map" instance=ExtResource("45_yik85")]
transform = Transform3D(-0.803857, 0, -0.594823, 0, 1, 0, 0.594823, 0, -0.803857, -2.81916, 2.62725, -0.219003)
lane = 1
team = 1

[node name="Turret_ChaosTurretShrine" parent="Map" instance=ExtResource("46_5vbbt")]
transform = Transform3D(0.793353, 0, 0.608761, 0, 1, 0, -0.608761, 0, 0.793353, 202.99, 2.62725, 207.257)
lane = 1
team = 2

[node name="Turret_T1_L_04" parent="Map" instance=ExtResource("36_dp7n3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.26559, 0.383416, 146.18)
lane = 2
pos = 3
team = 1

[node name="Turret_T1_L_05" parent="Map" instance=ExtResource("38_mmvut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.8671, 0.601478, 92.6741)
lane = 2
pos = 2
team = 1

[node name="Turret_T1_C_12" parent="Map" instance=ExtResource("36_oe0ed")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5233, 1.38329, 57.9765)
lane = 2
pos = 1
team = 1

[node name="Turret_T2_L_04" parent="Map" instance=ExtResource("39_qsin3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 55.9821, 0.187753, 195.288)
lane = 2
pos = 3
team = 2

[node name="Turret_T2_L_05" parent="Map" instance=ExtResource("41_igafg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 107.814, 0.560307, 188.654)
lane = 2
pos = 2
team = 2

[node name="Turret_T2_L_06" parent="Map" instance=ExtResource("38_bto7k")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 146.785, 1.3642, 192.586)
lane = 2
pos = 1
team = 2

[node name="Level" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("35_3l20p")

[node name="Constants" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("36_dp1ib")
ar_stop_attack_range_modifier = 100.0
ar_ai_charmed_acquisition_range = 1000.0
ai_target_distance_factor_per_neightbor = 0.6
ai_target_distance_factor_per_attacker = 0.8
ai_target_range_factor = 0.7
ai_target_path_factor = 0.5
ai_minion_targeting_hero_boost = 150.0
ai_target_max_num_attackers = 5
sv_spell_ratio = 1.0
sv_spell_aoe_ratio = 0.333
sv_spell_persist_ratio = 1.0
ai_ambient_gold_delay = 90.0
ai_ambient_gold_interval = 5.0
ai_ambient_gold_amount = 6.5
ai_ambient_xp_interval = 5.0
ai_time_dead_per_level = 4.0
ser_closeness_line_of_sight_threshold_turret = 200.0
bar_spawn_enabled = true
bar_max_hp = 4000
sp_regen_radius = 1100.0
sp_health_regen_percent = 0.085
sp_mana_regen_percent = 0.085
sp_regen_tick_interval = 1.0
ca_reveal_attacker_range = 400.0
ca_reveal_attacker_time_out = 4.5
ca_min_cast_rotation_speed = 250.0
events_time_for_multi_kill = 8.0
events_timer_for_assist = 10.0
aud_fmod_music_cue_id = 3
aud_fmod_ambient_event = "map_forest"
aud_fmod_victory_music_cue_id = 10
aud_fmod_defeat_music_cue_id = 11
hud_blink_frequency = 1000
hud_default_blink_count = 3
hud_targeting_reticle_height = 40.0
cam_keyboard_orbit_speed_x = 100.0
cam_keyboard_orbit_speed_y = 50.0
cam_min_x = 300.0
cam_min_y = 300.0
cam_max_x = 14545.0
cam_max_y = 14545.0
cr_spell_cast_flash_time = 2.0
cr_mouse_scroll_speed = 3900.0
ar_closing_attack_range_modifier = 300.0
gcd_attack_delay = 1.6
gcd_attack_delay_cast_percent = 0.3
gcd_attack_min_delay = 0.4
gcd_percent_attack_speed_mod_minimum = -0.95
gcd_attack_max_delay = 5.0
gcd_percent_cooldown_mod_minimum = -0.4
gcd_percent_respawn_time_mod_minimum = -0.95
gcd_percent_gold_lost_on_death_mod_minimum = -0.95
gcd_percent_exp_bonus_minimum = -1.0
gcd_percent_exp_bonus_maximum = 5.0
dr_hero_to_hero = 1.0
dr_building_to_hero = 1.05
dr_unit_to_hero = 0.6
dr_hero_to_unit = 1.0
dr_building_to_unit = 1.105
dr_unit_to_unit = 1.0
dr_hero_to_building = 1.0
dr_building_to_building = 1.0
dr_unit_to_building = 0.5
cfh_delay = 1.0
cfh_stick = 1.5
cfh_radius = 800.0
cfh_duration = 1.0
cfh_melee_radius = 420.0
cfh_ranged_radius = 170.0
ai_ai_toggle = true
ai_starting_gold = 475.0
ai_default_pet_return_radius = 200.0
import_path = "res://data/levels/1/Constants.var"
exp_curve = Array[int]([0, 0, 280, 670, 1170, 1780, 2500, 3330, 4270, 5320, 6480, 7750, 9130, 10620, 12220, 13930, 15750, 17680, 19720])
import_exp_curve_path = "res://data/levels/1/ExpCurve.ini"
metadata/_custom_type_script = ExtResource("36_dp1ib")

[node name="Ahri" parent="." instance=ExtResource("27_0mdok")]
transform = Transform3D(-0.803857, 0, 0.594823, 0, 1, 0, -0.594823, 0, -0.803857, 0.746, 2.485, -3.787)
team = 1

[node name="Dummy" parent="." instance=ExtResource("37_5t0se")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.359, 2.415, -12.238)
team = 2

[node name="Area3D" type="Area3D" parent="."]
monitoring = false
monitorable = false
script = ExtResource("38_tqj1w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("WorldBoundaryShape3D_xapae")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100.085, 2.90684, -114.142)

[node name="Particle" type="Node3D" parent="."]
script = ExtResource("39_gtrna")
metadata/_custom_type_script = ExtResource("39_gtrna")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("ViewportTexture_r0nt2")
centered = false
